# krowser

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: actions.yml
docs/examples/: docker-compose.yml
docs/examples/plugins/: Dockerfile  config.toml  readme.md  run.sh
docs/examples/plugins/configdemo/: Cargo.toml
docs/examples/plugins/configdemo/src/: lib.rs
docs/examples/plugins/helloworld/: Cargo.toml
docs/examples/plugins/helloworld/src/: lib.rs
public/: index.ejs
src/client/: cell_button.tsx  main.tsx  messages.tsx  partitions.tsx  style.css  toolbar.tsx  topics.tsx  tsconfig.json  webpack.config.js
src/client/common/: card_view.tsx  cell_button.tsx  data_view.tsx  error_msg.tsx  grid.tsx  loader.ts  theme_hook.tsx  toolbar.tsx  url.ts  use_search.ts
src/client/kafka/: broker_configs.tsx  brokers.tsx  groups.tsx  members.tsx  partitions.tsx  topic_configs.tsx  topic_groups.tsx  topics.tsx
src/client/kafka-connect/: connectors.tsx  tasks.tsx
src/client/kafka/messages/: fetcher.tsx  go_button.tsx  messages.tsx  multi_topics_input.tsx  single_topic_input.tsx  use_recursive_timeout.ts
src/client/schema-registry/: subjects.tsx  versions.tsx
src/server/: Cargo.toml  config.rs  config.ts  default.toml  kafka.rs  main.rs  server.ts  tsconfig.json
src/server-old/: main.ts  server.ts
src/server/common/: errors.rs
src/server/kafka/: api.rs  dto.rs
src/server/kafka/decoders/: api.rs  avro.rs  bytes.rs  decoders.rs  utf8.rs  utf8_lossy.rs
src/server/kafka_connect/: api.rs  dto.rs
src/server/schema_registry/: api.rs  dto.rs
src/serverapi/: Cargo.toml
src/serverapi/src/: lib.rs
src/shared/: api.ts  search.ts
test/: docker-compose-single-broker.yml  publisher.js  test.avsc  test_nested.avsc
