[package]
name = "serverapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.28", features = ["cmake-build"] }
async-std = "1.10.0"
async-trait = "0.1.53"
libloading = "0.7.3"

[lib]
crate-type = ["cdylib", "rlib"]
