[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serverapi = { path = "../../../../src/serverapi"}
rdkafka = { version = "0.28", features = ["cmake-build"] }

[lib]
crate-type = ["cdylib", "rlib"]
